removed dependencies